--- a/prgm_assign1.html
+++ b/prgm_assign1.html
@@ -141,7 +141,7 @@ body {font-family: Arial;}
 </div>
 
 <div id="Bio-data" class="tabcontent">
-    <img src="C:/Users/Prateek/Pictures/Saved Pictures/Rahul_Dravid.jpeg" align="right" height=100 width=100 />
+    <img src="Rahul_Dravid.jpeg" align="right" height=100 width=100 />
 <b>Name:</b> Kaushik Singh<br>
 <b>Father's name:</b> Giridhar M<br>
 <b>Mothers's name:</b> Suma V<br>
