update the HTML code

--- a/prgm_assign1.html
+++ b/prgm_assign1.html
@@ -47,8 +47,8 @@ body {font-family: Arial;}
 <body>
 
 <div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'Resume')">Resume</button>
-  <button class="tablinks" onclick="openTab(event, 'Bio-data')" id="defaultOpen">Bio-data</button>
+  <button class="tablinks" onclick="openTab(event, 'Resume')" id="defaultOpen">Resume</button>
+  <button class="tablinks" onclick="openTab(event, 'Bio-data')">Bio-data</button>
 </div>
 
 <div id="Resume" class="tabcontent">
@@ -175,4 +175,5 @@ document.getElementById("defaultOpen").click();
    
 </body>
 </html> 
+
 
